--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
     "vue": "^2.6.11",
+    "vue-date-pick": "^1.4.1",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
